--- a/hooks/.config
+++ b/hooks/.config
@@ -9,6 +9,7 @@ echo "DOCKER_REPO:     $DOCKER_REPO"
 echo "DOCKERFILE_PATH: ${DOCKERFILE_PATH:=./Dockerfile}"
 echo "CACHE_TAG:       $CACHE_TAG"
 echo "IMAGE_NAME:      $IMAGE_NAME"
+echo "GUACD_Version:   $GUACD_Version"
 
 # =>
 # https://hub.docker.com/u/arm64v8/
