--- a/hooks/build
+++ b/hooks/build
@@ -25,9 +25,9 @@ for arch in ${build_architectures[@]}; do
     --platform=${docker_arch_map[${arch}]} \
     --build-arg BASE_IMAGE_PREFIX=${base_image_prefix_map[${arch}]} \
     --build-arg GUACD_Version=${GUACD_Version} \
-    --file /build/$DOCKERFILE_PATH \
+    --file /build/${IMAGE_NAME_simple}/${DOCKERFILE_PATH} \
     --tag "${IMAGE_NAME}-${arch}"  \
-    /build
+    /build/${IMAGE_NAME_simple}
 done
 
 echo "✅ images built:"
